Add books and video resources

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@ The quickest way to get started with Spring Batch is to download the zip file an
 * [Creating a Batch Service]({{site.main_site_url}}/guides/gs/batch-processing)
 * [Spring Batch Getting Started](http://docs.spring.io/spring-batch/getting-started.html)
 
+### Resources
+
+* [Books](resources.html#books)
+* [Videos](resources.html#videos)
+
 ### Related Projects
 
 * [Spring Integration]({{site.projects_site_url}}/spring-integration/)
