--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ The quickest way to get started with Spring Batch is to download the zip file an
 1. Download the zip release from our repository: [Download](http://static.springsource.org/downloads/nightly/release-download.php?project=BATCH)
 2. After unzipping the download, copy the /samples/spring-batch-simple-cli folder to your workspace.
 3. From the root of you new project's directory, you can build the project via maven `mvn clean install`
-4. From the project's target directory, you'll be able to run your new job (pipes a file into an in memory database table) via the command `java -jar spring-batch-simple-cli-2.2.3.RELEASE.jar launch-context.xml personJob`
+4. From the project's target directory, you'll be able to run your new job (pipes a file into an in memory database table) via the command `java -jar spring-batch-simple-cli-2.2.4.RELEASE.jar launch-context.xml personJob`
 
 ## Java based configuration (3.0+)
 1. Download the zip release from our repository: [Download](http://static.springsource.org/downloads/nightly/milestone-download.php?project=BATCH)
@@ -91,6 +91,7 @@ The quickest way to get started with Spring Batch is to download the zip file an
 
 * [Spring Integration]({{site.projects_site_url}}/spring-integration/)
 * [Spring Data]({{site.projects_site_url}}/spring-data/)
+* [Spring for Apache Hadoop]({{site.projects_site_url}}/spring-hadoop/)
 
 {% endcapture %}
 
