Updated Bamboo URL

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ badges:
       icon: tracking
 
     - name: CI (Bamboo)
-      url:  https://build.springsource.org/browse/BATCH
+      url:  https://build.spring.io/browse/BATCH
       icon: ci
 
     - name: Forum
