BATCH-2219: Moved FAQ to Spring.io site

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ The quickest way to get started with Spring Batch is to download the zip file an
 
 ### Resources
 
+* [FAQ](faq.html)
 * [Books](resources.html#books)
 * [Videos](resources.html#videos)
 
