BATCH-2223: Fixed wording

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Spring Batch provides reusable functions that are essential in processing large 
 
 The quickest way to get started with Spring Batch is to use Spring Boot.
 
-1. Once your build process is setup (using either Maven or Gradle), add the batch starter dependency
+1. Once your build process is setup (using either Maven or Gradle) using Spring Boot, add the batch starter dependency
 
     ````xml
     <!-- Maven -->
