Add @EnableAutoConfiguration so quick start actually runs
See http://stackoverflow.com/questions/24480219/spring-batch-quick-start-not-working/24484138?noredirect=1#comment38077389_24484138

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ The quickest way to get started with Spring Batch is to use Spring Boot.
     ````java
     @Configuration
     @EnableBatchProcessing
+    @EnableAutoConfiguration
     public class BatchConfiguration {
 
       @Autowired
