--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Spring Batch provides reusable functions that are essential in processing large 
 * Chunk based processing
 * Declarative I/O
 * Start/Stop/Restart
-* Rety/Skip
+* Retry/Skip
 * Web based administration interface (Spring Batch Admin)
 
 <span id="quick-start"></span>
