--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ You can read more about using Spring Boot with Spring Batch in the Getting Start
 
 * [FAQ](faq.html)
 * [Books](resources.html#books)
+* [Video Training](resources.html#video_training)
 * [Videos](resources.html#videos)
 
 ### Related Projects
