--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@ The quickest way to get started with Spring Batch is to use Spring Boot.
 
     ````java
     @Configuration
-    @EnableBatchProcessing
-    @EnableAutoConfiguration
     public class BatchConfiguration {
 
       @Autowired
@@ -108,6 +106,8 @@ The quickest way to get started with Spring Batch is to use Spring Boot.
 3. Create a main class to run your batch job from
 
     ````java
+    @EnableBatchProcessing
+    @SpringBootApplication
     public class Main {
       public static void main(String [] args) {
         System.exit(SpringApplication.exit(SpringApplication.run(
