Various changes to support a better document toggle.
I got a simpler document toggle to work with the dynamic ToC, and I added cookies to remember the doc toggle setting for our readers. I started from scratch, with an eye specifically toward simplifying the HTML and JavaScript and doing more with CSS. I have tested it on Chrome, Firefox, Safari, and Opera. I'll try it on IE/Edge after this commit (when I can hit it from my Windows laptop).

--- a/spring-batch-docs/asciidoc/docinfo-footer.html
+++ b/spring-batch-docs/asciidoc/docinfo-footer.html
@@ -13,10 +13,8 @@
         headingSelector: 'h1, h2, h3, h4, h5',
         smoothScroll: false });
     var handleTocRefresh = function() {
-        tocbot.refresh({ contentSelector: '#content',
-            headingSelector: 'h1, h2, h3, h4, h5',
-            smoothScroll: false });
-    };
+        tocbot.refresh();
+    }
     var handleTocOnResize = function() {
         var width = window.innerWidth
                     || document.documentElement.clientWidth
@@ -38,5 +36,4 @@
     window.addEventListener('resize', handleTocOnResize);
     window.addEventListener('tocRefresh', handleTocRefresh);
     handleTocOnResize();
-    handleToCRefresh();
 </script>
