--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ badges:
       icon: stackoverflow
 
     - name: Metrics (SonarQube)
-      url: https://sonar.springsource.org/dashboard/index/org.springframework.batch:spring-batch
+      url: https://sonar.spring.io/dashboard/index/org.springframework.batch:spring-batch
       icon: metrics
 
 ---
@@ -48,7 +48,7 @@ Spring Batch provides reusable functions that are essential in processing large 
 * Declarative I/O
 * Start/Stop/Restart
 * Retry/Skip
-* Web based administration interface (Spring Batch Admin)
+* Web based administration interface ([Spring Cloud Data Flow](https://cloud.spring.io/spring-cloud-dataflow/))
 
 <span id="quick-start"></span>
 ## Quick Start
