fix link to sonar page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ badges:
       icon: stackoverflow
 
     - name: Metrics (SonarQube)
-      url: https://sonar.springsource.org/dashboard/index/org.springframework.batch:spring-batch
+      url: https://sonar.spring.io/dashboard/index/org.springframework.batch:spring-batch
       icon: metrics
 
 ---
